--- a/3/partnumbers.ipynb
+++ b/3/partnumbers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -150,13 +150,13 @@
        " '.............885.................................600.456...........................................679.............16.........392.....841...']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "file_path = r'C:\\Users\\KG\\Documents\\Git\\Advent of code 2023\\3\\doc.txt' \n",
+    "file_path = r'C:\\Users\\KG\\Documents\\GitHub\\advent-of-code-2023\\3\\doc.txt' \n",
     "\n",
     "with open(file_path, 'r') as file:\n",
     "    orgiginal_lines = file.readlines()\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "535078"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "75312571"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
