--- a/5/seednumbcalc.ipynb
+++ b/5/seednumbcalc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        " '3784058763 4248355592 27012777']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        " '257129208']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
        "  [3784058763, 4248355592, 27012777]]}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
        "98"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
        " 1604976410]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "340994526"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
        "2"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,13 +722,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def map_range_shit(numbs, maps):\n",
-    "    done = torch.tensor([], dtype=torch.int64)\n",
-    "    not_done = numbs.clone()\n",
+    "    done = torch.tensor([], dtype=torch.int64).to(\"cuda\")\n",
+    "    not_done = numbs.clone().to(\"cuda\")\n",
     "\n",
     "    for map in maps:\n",
     "        in_ranged = not_done[(map[1] <= not_done) & (not_done <=  (map[1] + map[2] - 1))]\n",
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,10 +755,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(range(10))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -769,16 +782,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,45 +802,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "Torch not compiled with CUDA enabled",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\KG\\Documents\\GitHub\\advent-of-code-2023\\5\\seednumbcalc.ipynb Cell 16\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/KG/Documents/GitHub/advent-of-code-2023/5/seednumbcalc.ipynb#X14sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m,\u001b[39mlen\u001b[39m(rs),\u001b[39m2\u001b[39m):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/KG/Documents/GitHub/advent-of-code-2023/5/seednumbcalc.ipynb#X14sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mprint\u001b[39m(i)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/KG/Documents/GitHub/advent-of-code-2023/5/seednumbcalc.ipynb#X14sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     ar \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mtensor(\u001b[39mrange\u001b[39;49m(rs[i], rs[i] \u001b[39m+\u001b[39;49m rs[i\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m]), dtype\u001b[39m=\u001b[39;49mtorch\u001b[39m.\u001b[39;49mint64)\u001b[39m.\u001b[39;49mto(\u001b[39m\"\u001b[39;49m\u001b[39mcuda\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/KG/Documents/GitHub/advent-of-code-2023/5/seednumbcalc.ipynb#X14sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mfor\u001b[39;00m name, \u001b[39mmap\u001b[39m \u001b[39min\u001b[39;00m maps\u001b[39m.\u001b[39mitems():\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/KG/Documents/GitHub/advent-of-code-2023/5/seednumbcalc.ipynb#X14sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m         \u001b[39mprint\u001b[39m(name)\n",
-      "File \u001b[1;32mc:\\Users\\KG\\Documents\\GitHub\\advent-of-code-2023\\.venv\\lib\\site-packages\\torch\\cuda\\__init__.py:289\u001b[0m, in \u001b[0;36m_lazy_init\u001b[1;34m()\u001b[0m\n\u001b[0;32m    284\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\n\u001b[0;32m    285\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mCannot re-initialize CUDA in forked subprocess. To use CUDA with \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    286\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mmultiprocessing, you must use the \u001b[39m\u001b[39m'\u001b[39m\u001b[39mspawn\u001b[39m\u001b[39m'\u001b[39m\u001b[39m start method\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    287\u001b[0m     )\n\u001b[0;32m    288\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mhasattr\u001b[39m(torch\u001b[39m.\u001b[39m_C, \u001b[39m\"\u001b[39m\u001b[39m_cuda_getDeviceCount\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m--> 289\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAssertionError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mTorch not compiled with CUDA enabled\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    290\u001b[0m \u001b[39mif\u001b[39;00m _cudart \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    291\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAssertionError\u001b[39;00m(\n\u001b[0;32m    292\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mlibcudart functions unavailable. It looks like you have a broken build?\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    293\u001b[0m     )\n",
-      "\u001b[1;31mAssertionError\u001b[0m: Torch not compiled with CUDA enabled"
-     ]
+     "data": {
+      "text/plain": [
+       "'rs = [int(s) for s in seeds]\\nsmalest = \"\"\\nfor i in range(0,len(rs),2):\\n    print(i)\\n    ar = torch.tensor(range(rs[i], rs[i] + rs[i+1]), dtype=torch.int64).to(\"cuda\")\\n    for name, map in maps.items():\\n        print(name)\\n        new_ar = torch.tensor([], dtype=torch.int64).to(\"cuda\")\\n        for seed in ar:\\n            new_ar = torch.cat((new_ar, torch.tensor([map_shit(seed, map)],  dtype=torch.int64).to(\"cuda\"))) \\n        #ar = map_range_shit(ar, map)\\n        ar = new_ar\\n    if smalest == \"\":\\n        smalest = torch.min(ar)\\n    else:\\n        ar_min = int(torch.min(ar))\\n        smalest = min(smalest, ar_min)\\nsmalest'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "rs = [int(s) for s in seeds]\n",
+    "\"\"\"rs = [int(s) for s in seeds]\n",
     "smalest = \"\"\n",
     "for i in range(0,len(rs),2):\n",
     "    print(i)\n",
     "    ar = torch.tensor(range(rs[i], rs[i] + rs[i+1]), dtype=torch.int64).to(\"cuda\")\n",
     "    for name, map in maps.items():\n",
     "        print(name)\n",
-    "        ar = map_range_shit(ar, map)\n",
+    "        new_ar = torch.tensor([], dtype=torch.int64).to(\"cuda\")\n",
+    "        for seed in ar:\n",
+    "            new_ar = torch.cat((new_ar, torch.tensor([map_shit(seed, map)],  dtype=torch.int64).to(\"cuda\"))) \n",
+    "        #ar = map_range_shit(ar, map)\n",
+    "        ar = new_ar\n",
     "    if smalest == \"\":\n",
     "        smalest = torch.min(ar)\n",
     "    else:\n",
     "        ar_min = int(torch.min(ar))\n",
     "        smalest = min(smalest, ar_min)\n",
+    "smalest\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_list(input_list, num_parts):\n",
+    "    avg = len(input_list) // num_parts\n",
+    "    remainder = len(input_list) % num_parts\n",
+    "    return [input_list[i * avg + min(i, remainder):(i + 1) * avg + min(i + 1, remainder)] for i in range(num_parts)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "113059536"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "28264884 * 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "part 10\n",
+      "2\n",
+      "part 6\n",
+      "4\n",
+      "part 4\n",
+      "6\n",
+      "part 25\n",
+      "8\n",
+      "part 1\n",
+      "10\n",
+      "part 1\n",
+      "12\n",
+      "part 19\n",
+      "14\n",
+      "part 5\n",
+      "16\n",
+      "part 14\n",
+      "18\n",
+      "part 12\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "52210644"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "inte_seeds = [int(s) for s in seeds]\n",
+    "smalest = \"\"\n",
+    "for i in range(0,len(inte_seeds),2):\n",
+    "    print(i)\n",
+    "    seed_range = range(inte_seeds[i], inte_seeds[i] + inte_seeds[i+1])\n",
+    "\n",
+    "\n",
+    "    partition = math.ceil((len(seed_range) / 23059536)  )\n",
+    "    print(\"part\", partition)\n",
+    "    ranges = split_list(seed_range, partition)\n",
+    "    for r in ranges:\n",
+    "        ar = torch.arange(min(r), max(r), dtype=torch.int64).to(\"cuda\")\n",
+    "        for name, map in maps.items():\n",
+    "            ar = map_range_shit(ar, map)\n",
+    "        if smalest == \"\":\n",
+    "            smalest = torch.min(ar)\n",
+    "        else:\n",
+    "            ar_min = int(torch.min(ar))\n",
+    "            smalest = min(smalest, ar_min)\n",
     "smalest\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
